test/functions/intents/constRefArgRefReturn.good
constRefArgRefReturn.chpl:1: error: Cannot return a const expression as a non-const reference.
